--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,19 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".fragment.MainActivityFragment"
-    tools:showIn="@layout/activity_main">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <data>
 
-</android.support.constraint.ConstraintLayout>
+        <variable
+            name="location"
+            type="space.siwawesw.app.gps.model.Location" />
+    </data>
+
+    <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".fragment.MainActivityFragment"
+        tools:showIn="@layout/activity_main">
+
+        <TextView
+            android:id="@+id/tvHelloWorld"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:text="Hello World!"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tvLatitudeLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="24dp"
+            android:text="Latitude"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvHelloWorld" />
+
+        <TextView
+            android:id="@+id/tvLatitudeValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="@{Double.toString(location.latitude)}"
+            app:layout_constraintStart_toEndOf="@+id/tvLatitudeLabel"
+            app:layout_constraintTop_toTopOf="@+id/tvLatitudeLabel" />
+
+        <TextView
+            android:id="@+id/tvLongitudeLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Longitude"
+            app:layout_constraintStart_toStartOf="@+id/tvLatitudeLabel"
+            app:layout_constraintTop_toBottomOf="@+id/tvLatitudeLabel" />
+
+        <TextView
+            android:id="@+id/tvLongitudeValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="@{Double.toString(location.longitude)}"
+            app:layout_constraintStart_toEndOf="@+id/tvLongitudeLabel"
+            app:layout_constraintTop_toTopOf="@+id/tvLongitudeLabel" />
+
+        <TextView
+            android:id="@+id/tvAccuracyLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Accuracy"
+            app:layout_constraintStart_toStartOf="@+id/tvLongitudeLabel"
+            app:layout_constraintTop_toBottomOf="@+id/tvLongitudeLabel" />
+
+        <TextView
+            android:id="@+id/tvAccuracyValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="@{Float.toString(location.accuracy)}"
+            app:layout_constraintStart_toEndOf="@+id/tvAccuracyLabel"
+            app:layout_constraintTop_toTopOf="@+id/tvAccuracyLabel" />
+
+    </android.support.constraint.ConstraintLayout>
+
+</layout>
